Added some test notification

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div id="container">
         <div id="vertical-centered">
             <div class="row">
+                <button id="notification-button">reminder</button>
+            </div>
+            <div class="row">
                 <div id="result-display">
                     <p id="result-text">
                         0
